[package]
name = "bitcask-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", features = ["serde"] }
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
lru = "0.12.3"
chrono = "0.4.35"
