[package]
name = "bitcask-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", features = ["serde"] }
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
lru = "0.12"
chrono = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
crossbeam-skiplist = "0.1"
rand = "0.8"

tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
