[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
bytes = { version = "1", features = ["serde"] }
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
lru = "0.12"
chrono = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
crossbeam-skiplist = "0.1"
rand = "0.8"
parking_lot = "0.12.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
axum = "0.7"
anyhow = "*"

[[example]]
name = "shorten"